<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUpFrag"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fragment_shape"
    android:orientation="vertical"
    android:padding="30dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".ui.SignUpFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/signUpHeader"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/SignUpDesc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/user"
        android:padding="8dp"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_person">

        <EditText
            android:id="@+id/SignUpNameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/Mobile"
        android:padding="8dp"
        app:endIconMode="clear_text"
        app:prefixText="+98"
        app:prefixTextColor="@color/behGreen"
        app:startIconDrawable="@drawable/ic_phone">

        <EditText
            android:id="@+id/SignUpMobileEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/Password"
        android:padding="8dp"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_lock">

        <EditText
            android:id="@+id/SignUpPassEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/TermDesc"
        android:textColor="@color/gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:padding="15dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/behGreen"
        android:gravity="center"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>