<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_shape"
    android:orientation="vertical"
    android:padding="20dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".ui.SignInFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/SignInHeader"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/LoginDesc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/Mobile"
        android:padding="8dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:prefixText="+98"
        app:prefixTextColor="@color/behGreen"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginMobileEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/Password"
        android:padding="8dp"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LoginPassEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/ForgetPass"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/behGreen"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>