<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsMovie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_shape"
    android:backgroundTint="#B6F8D4"
    android:padding="20dp"
    app:behavior_hideable="false"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".ui.MovieDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imgLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgBackground"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:alpha="0.1"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgDetails"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@color/behWhite"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_loading"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_details"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvMovieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtTagline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/tagline"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvMovieName" />

                <TextView
                    android:id="@+id/txtInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/movie_info"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtTagline" />

                <TextView
                    android:id="@+id/txtDateDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/released_date"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtInfo" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_8_2_22"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/txtDateDetails"
                    app:layout_constraintTop_toTopOf="@id/txtDateDetails" />

                <TextView
                    android:id="@+id/txtRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtDateDetails" />

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_8_2_22"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/txtRating"
                    app:layout_constraintTop_toTopOf="@id/txtRating" />

                <TextView
                    android:id="@+id/txtRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/runtime"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtRating" />

                <TextView
                    android:id="@+id/tvRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_8_2_22"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/txtRuntime"
                    app:layout_constraintTop_toTopOf="@id/txtRuntime" />

                <TextView
                    android:id="@+id/txtBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/budget"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtRuntime" />

                <TextView
                    android:id="@+id/tvBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_8_2_22"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/txtBudget"
                    app:layout_constraintTop_toTopOf="@id/txtBudget" />

                <TextView
                    android:id="@+id/txtRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/revenue"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtBudget" />

                <TextView
                    android:id="@+id/tvRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/_8_2_22"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/txtRevenue"
                    app:layout_constraintTop_toTopOf="@id/txtRevenue" />

                <TextView
                    android:id="@+id/txtOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/overview"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtRevenue" />

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/summary"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/txtOverview"
                    app:layout_constraintTop_toTopOf="@id/txtOverview" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>